--- a/templates/index.html
+++ b/templates/index.html
@@ -1,32 +1,129 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-    <head>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Flask OCR</title>
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
-      </head>
-      <body>
-          <div class="container">
-              <div class="col-12 mt-4"><h1>Extrair texto de uma Imagem</h1></div>
-              
-              <div class="col-12">
-                  <form action="/upload" method="post" enctype="multipart/form-data">
-                    <div class="row">
-                      <label class="form-label" for="customFile">Selecione a Imagem:</label>
-                      <input type="file" class="form-control" id="image" name="image" accept="application/jpg"  required/>
-                      
-                        <button type="submit" class="text-center mt-4 btn btn-success"> Upload</button>
-                      </div>
-                    </form>
-
-                    <div class="form-group green-border-focus">
-                        <textarea class="form-control mt-4"  rows="10">{{text}}</textarea> 
-                    </div>
-                </div>
-                
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>Flask OCR</title>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor"
+      crossorigin="anonymous"
+    />
+    <link
+      href="https://cdnjs.cloudflare.com/ajax/libs/dropzone/5.9.3/min/dropzone.min.css"
+      rel="stylesheet"
+      type="text/css"
+    />
+  </head>
+  <body>
+    <div class="container">
+      <div class="col-12 mt-4"><h1>Extrair texto de uma Imagem</h1></div>
+      <div class="col-12">
+        <form
+          action="/upload"
+          method="post"
+          enctype="multipart/form-data"
+          class="dropzone"
+          id="myDropzone"
+        >
+          <div class="fallback">
+            <input
+              type="file"
+              class="form-control"
+              id="image"
+              name="image"
+              required
+            />
           </div>
-       
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
-      </body>
-    </html>
+        </form>
+        <button
+          type="button"
+          class="text-center mt-4 btn btn-success"
+          onclick="enviar()"
+        >
+          Upload
+        </button>
+      </div>
+      <div class="form-group green-border-focus">
+        <textarea class="form-control mt-4" rows="10" id="text" readonly>
+{{text}}</textarea
+        >
+      </div>
+    </div>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/dropzone/5.9.3/min/dropzone.min.js"></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
+      crossorigin="anonymous"
+    ></script>
+    <script>
+      function htmlToJson(html) {
+        const parser = new DOMParser();
+        const doc = parser.parseFromString(html, "text/html");
+
+        const elementToJson = (el) => {
+          const obj = {};
+          obj.tag = el.tagName.toLowerCase();
+
+          // Extract attributes
+          const attributes = el.getAttributeNames();
+          if (attributes.length > 0) {
+            obj.attributes = {};
+            attributes.forEach((attr) => {
+              obj.attributes[attr] = el.getAttribute(attr);
+            });
+          }
+
+          // Extract children
+          const children = el.children;
+          if (children.length > 0) {
+            obj.children = [];
+            for (let i = 0; i < children.length; i++) {
+              obj.children.push(elementToJson(children[i]));
+            }
+          } else {
+            obj.content = el.textContent.trim();
+          }
+
+          return obj;
+        };
+
+        return elementToJson(doc.body.children[0]);
+      }
+
+      // Desativa a auto descoberta do dropzone para permitir a customização
+      Dropzone.autoDiscover = false;
+
+      // Configurações do dropzone
+      var myDropzone = new Dropzone("#myDropzone", {
+        paramName: "image",
+        maxFiles: 1,
+        acceptedFiles: "image/*",
+        addRemoveLinks: true,
+        dictDefaultMessage: "Arraste a imagem aqui ou clique para selecionar",
+        dictRemoveFile: "Remover imagem",
+        dictCancelUpload: "Cancelar upload",
+        dictCancelUploadConfirmation:
+          "Tem certeza que deseja cancelar o upload?",
+      });
+
+      // Ação do botão de upload
+      function enviar() {
+        myDropzone.processQueue();
+      }
+
+      // Ação ao completar o upload
+      myDropzone.on("success", function (file, response) {
+        <!-- console.log("res", response); -->
+
+        const responseJSON = htmlToJson(response)
+        console.log("responseJSON", responseJSON?.children[2]?.children[0]?.content)
+        console.log("responseJSON", responseJSON?.children[2])
+        const textAreaContent = responseJSON?.children[2]?.children[0]?.content
+        document.getElementById("text").value = textAreaContent;
+
+      });
+    </script>
+  </body>
+</html>
